5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1649_2447.log
== TEST (2019-04-11 19:27:28) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= preco-pagamento
y= pagamento-preco
if (preco>pagamento):
	menssagem="falta "+ x
else:
	menssagem="troco "+ y

print(menssagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:28:41) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= float(pagamento-preco)
if (preco>pagamento):
	menssagem="falta "+ x
else:
	menssagem="troco de "+ y

print(round(menssagem, 2)
-- ERROR:
File "XXXX", line 11
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:29:09) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= float(pagamento-preco)
if (preco>pagamento):
	menssagem="falta "+ x
else:
	menssagem="troco de "+ y

print(round(menssagem, 2)
-- ERROR:
File "XXXX", line 11
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:29:19) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= float(pagamento-preco)
if (preco>pagamento):
	menssagem="falta "+ x
else:
	menssagem="troco de "+ y

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:30:55) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= float(pagamento-preco)
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	menssagem="Troco de "+ y

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:31:21) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	menssagem="Troco de "+ y

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:31:48) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	menssagem="Troco de "+ y

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:17) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	menssagem=Troco de + y

print(round(menssagem, 2))
-- ERROR:
File "XXXX", line 8
    menssagem=Troco de + y
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:46) 
-- CODE:
preco=float(input("preco "))
pagamento=float(input("pagamento "))
x= float(preco-pagamento)
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	print("Troco de "+y)

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    menssagem="Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:33:14) 
-- CODE:
preco=input("preco ")
pagamento=input("pagamento ")
x= float(preco-pagamento)
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	print("Troco de "+y)

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x= float(preco-pagamento)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:33:44) 
-- CODE:
preco=input("preco ")
pagamento=input("pagamento ")
x= preco-pagamento
y= pagamento - preco
if (preco>pagamento):
	menssagem="Falta "+ x
else:
	print("Troco de "+y)

print(round(menssagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x= preco-pagamento
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:52:26) 
-- CODE:
preco = float(input("Digite o preco: "))
pagamento = float(input("Digite o pagamento: "))
p1 = (preco - pagamento)
p2 = (pagamento - preco)
if(preco > pagamento):
	p = "Falta"
	pp = p1
	print(p, round(pp, 2))
else:
	t = "Troco de"
	ppp = p2
	print(t, round(ppp, 2))
	
-- EXECUTION TIME:
0.169868
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
